--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,7 @@ img {
     height: 300px;
 }
 .main-1 {
-    height: 800px;
+    height: 730px;
     width: 1302px;
     /* border: 2px solid red; */
     text-align: center;
@@ -149,6 +149,85 @@ img {
 .main-btn{
     text-align: left;
 }
+
+/* ------------style--feature--section----- */
+.feature-section {
+    height: 813px;
+    width: 1216px;
+    /* border: 2px solid red; */
+}
+.feature-text {
+    height: 741px;
+    width: 463px;
+    /* border: 2px solid red; */
+    margin-left: 205px;
+}
+.feature-img {
+    height: 763px;
+    width: 540px;
+    /* border: 2px solid red; */
+}
+#feature-imge {
+    width: 530px;
+}
+.vertical-line {
+    border-left: 6px solid #fd6e0a;
+    height: 87px;
+    position: relative;
+    top: 89px;
+    margin-left: 22px;
+}
+.feature-title {
+    font-size: 32px;
+    font-weight: 700;
+    margin-left: 46px;
+}
+.feature-section-text {
+    font-size: 13px;
+    line-height: 24px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 9px;
+}
+.feature-box {
+    height: 131px;
+    width: 460px;
+    border: 2px solid rgb(245, 245, 237);
+    margin-top: 13px;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+}
+.feature-title-1 {
+    margin-top: 10px;
+    font-size: 16px;
+    margin-left: 20px;
+}
+.feature-text-1 {
+    margin-top: 18px;
+    font-size: 13px;
+    line-height: 24px;
+    margin-left: 15px;
+}
+.btn-2 {
+    margin-left: 667px;
+    position: relative;
+    bottom: 93px;
+}
+.btn-3 {
+    text-align: center;
+    height: 94px;
+    border-radius: 5px;
+    background: #FD6E0A;
+    color: #FFFFFF;
+    font-size: 18px;
+    border: 0;
+    padding: 9px 35px;
+}
+.span-btn {
+    font-size: 33px;
+    font-weight: 700;
+}
+
 
 @media screen and (max-width:675px){
     label.logo{
